choice gets initialized and routing works

--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/normalize.min.css?v=1.0">
   <link rel="stylesheet" href="css/style.css?v=1.0">
-  <script src="js/cyoa.js"></script>
+  <script src="js/cyoa.js?v=1.0"></script>
+  <script src="js/choices.js?v=1.0"></script>
 </head>
 
 <body>
   <section id="current-choice" class="cyoa-item">
-    <h1>Title</h1>
-    <p>text</p>
-    <ol>
-      <li><a href="#test1">choice 1</a></li>
-      <li><a href="#another-test">choice 2</a></li>
-    </ol>
+    <h1 class="title">ALLLES IS STUK!</h1>
+    <p class="body">De applicatie is nog niet geïnitialiseerd, ga klagen bij een developer :)</p>
+    <ol class="options"></ol>
   </section>
-  <script src="js/init.js"></script>
+  <script src="js/init.js?v=1.0"></script>
 </body>
 
 </html>
