--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section id="current-choice" class="cyoa-item">
     <h1 class="title">ALLLES IS STUK!</h1>
     <p class="body">De applicatie is nog niet geïnitialiseerd, ga klagen bij een developer :)</p>
-    <ol class="options"></ol>
+    <ul class="options"></ul>
   </section>
   <script src="js/init.js?v=1.0"></script>
 </body>
